fix: align number to the right edge

--- a/src/components/Editor/Editor.css
+++ b/src/components/Editor/Editor.css
@@ -64,7 +64,8 @@ html[dir="rtl"] .editor-mount {
 
 :not(.empty-line):not(.new-breakpoint) > .CodeMirror-gutter-wrapper:hover > .CodeMirror-linenumber {
   color: white;
-  left: 27px !important;
+  left: auto !important;
+  right: 4px;
 }
 
 .editor-wrapper .breakpoints {
